--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "lint": "next lint"
   },
   "dependencies": {
     "@faker-js/faker": "^6.2.0",
@@ -22,7 +20,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
-    "@types/luxon": "^2.0.8",
     "@types/node": "17.0.13",
     "@types/react": "18.0.5",
     "@types/tailwindcss": "^3.0.3",
@@ -31,7 +28,6 @@
     "css-loader": "^6.6.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
-    "eslint-plugin-storybook": "^0.5.6",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "style-loader": "^3.3.1",
