--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-cms",
+  "name": "pokedex",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@faker-js/faker": "^6.2.0",
+    "@apollo/client": "^3.6.1",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "graphql": "^16.4.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
-    "react-json-view": "^1.21.3",
-    "sharp": "^0.30.3"
+    "sharp": "^0.30.3",
+    "use-debounce": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
