--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.1",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "graphql": "^16.4.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sharp": "^0.30.3",
     "use-debounce": "^8.0.1"
